app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-rest-crud
  template:
    metadata:
      labels:
        app: go-rest-crud
    spec:
      containers:
      - name: hello-py
        image: dharlequin/go-rest-crud:v5
        ports:
        - name: web
          containerPort: 8080
