app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: go-rest-crud
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
