app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.default.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/sign-in"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /current-user
          pathType: Exact
          backend:
            service:
              name: app-service
              port:
                number: 9000
        - path: /users
          pathType: Prefix
          backend:
            service:
              name: app-service
              port:
                number: 9000
